--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="prompt_password">Senha</string>
     <string name="action_sign_in">Entrar ou novo registro</string>
     <string name="action_sign_in_short">Entrar</string>
-    <string name="welcome">"Bem-Vindo !"</string>Nome de usuário não válido</string>
+    <string name="welcome">"Bem-Vindo !"</string>
+    <string name="invalid_username">Nome de usuário não válido</string>
     <string name="invalid_password">Senha deve ter mais de 5 caracteres</string>
     <string name="login_failed">"Erro ao entrar"</string>
 </resources>
